# lpn-fullstack

./: .gitignore  README.md  docker-compose.yaml
client/: Dockerfile  index.html  package-lock.json  package.json  vite.config.js
client/css/: style.css
client/js/: main.js
nginx/: default.conf
server/: Cargo.toml  Dockerfile  data.json
server/src/: main.rs  sum.rs
