[package]
name = "lpn-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.2"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tower-http = { version = "0.5.0", features = ["cors"] }